--- a/examples/explicit/package.json
+++ b/examples/explicit/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome": "0.0.20",
-    "@fortawesome/fontawesome-free-solid": "^0.0.17",
-    "@fortawesome/react-fontawesome": "0.0.11",
+    "@fortawesome/fontawesome": "^1.0.1",
+    "@fortawesome/fontawesome-free-solid": "^5.0.1",
+    "@fortawesome/react-fontawesome": "^0.0.15",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14"
