--- a/examples/external/package.json
+++ b/examples/external/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome": "0.0.20",
-    "@fortawesome/react-fontawesome": "0.0.12",
+    "@fortawesome/fontawesome": "^1.0.1",
+    "@fortawesome/react-fontawesome": "^0.0.15",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.16"
