--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "scripts": {
     "build": "rollup -c rollup.config.js",
-    "dist": "NODE_ENV=production npm run build",
+    "dist": "cross-env NODE_ENV=production npm run build",
     "test": "jest"
   },
   "peerDependencies": {
@@ -30,6 +30,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "cross-env": "^5.1.1",
     "jest": "^21.0.1",
     "prop-types": "^15.5.10",
     "react": "16.0.0",
