--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@fortawesome/react-fontawesome",
   "description": "Official React component for Font Awesome 5",
-  "version": "0.0.20",
+  "version": "0.1.0-1",
   "main": "index.js",
   "module": "index.es.js",
   "jsnext:main": "index.es.js",
+  "types": "index.d.ts",
   "homepage": "https://github.com/FortAwesome/react-fontawesome",
   "repository": {
     "type": "git",
@@ -12,7 +13,8 @@
   },
   "contributors": [
     "Travis Chase <travis@fontawesome.com>",
-    "Rob Madole <rob@fontawesome.com>"
+    "Rob Madole <rob@fontawesome.com>",
+    "Mike Wilkerson <mwilkerson@gmail.com>"
   ],
   "license": "MIT",
   "scripts": {
@@ -28,11 +30,12 @@
     "README.md": ["markdown-toc -i"]
   },
   "peerDependencies": {
-    "@fortawesome/fontawesome": ">=1.1.0",
+    "@fortawesome/fontawesome": "^1.2.0-2",
     "react": "16.x"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome": ">=1.0.0",
+    "@fortawesome/fontawesome": "^1.2.0-2",
+    "@types/react": "^16.0.31",
     "babel-eslint": "^8.2.1",
     "babel-jest": "^21.0.0",
     "babel-plugin-external-helpers": "^6.22.0",
