--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fortawesome/react-fontawesome",
   "description": "Official React component for Font Awesome 5",
-  "version": "0.1.0-3",
+  "version": "0.1.0-6",
   "main": "index.js",
   "module": "index.es.js",
   "jsnext:main": "index.es.js",
@@ -22,52 +22,54 @@
     "dist": "cross-env NODE_ENV=production npm run build",
     "lint": "eslint src",
     "prettier": "pretty-quick src --staged",
-    "precommit": "yarn lint && yarn prettier && lint-staged",
-    "prepack": "yarn dist",
-    "test": "jest"
+    "precommit": "npm run lint && npm run prettier && lint-staged",
+    "prepack": "npm run dist",
+    "test": "jest",
+    "clean": "rm -f index.js && rm -f index.es.js"
   },
   "lint-staged": {
     "README.md": ["markdown-toc -i"]
   },
   "peerDependencies": {
-    "@fortawesome/fontawesome": "^1.2.0-2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-7",
     "react": "16.x"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome": "^1.2.0-2",
-    "@types/react": "^16.0.31",
-    "babel-eslint": "^8.2.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-7",
+    "@types/react": "^16.1.0",
     "babel-core": "^6.26.0",
-    "babel-jest": "^21.0.0",
+    "babel-eslint": "^8.2.1",
+    "babel-jest": "^22.4.3",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.1.1",
-    "eslint": "^4.16.0",
+    "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jest": "^21.7.0",
-    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-standard": "^3.0.1",
     "husky": "^0.14.3",
-    "jest": "^21.0.1",
+    "jest": "^22.4.3",
     "lint-staged": "^7.1.0",
     "markdown-toc": "^1.2.0",
-    "prettier": "1.10.2",
+    "prettier": "^1.11.1",
     "pretty-quick": "^1.2.2",
-    "react": "16.0.0",
-    "react-test-renderer": "16.0.0",
-    "rollup": "0.50.0",
+    "prop-types": "^15.5.10",
+    "react": "^16.2.0",
+    "react-test-renderer": "^16.2.0",
+    "rollup": "^0.57.1",
     "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "8.2.3",
-    "rollup-plugin-node-resolve": "^3.0.0"
+    "rollup-plugin-commonjs": "^9.1.0",
+    "rollup-plugin-node-resolve": "^3.3.0"
   },
   "dependencies": {
     "humps": "^2.0.1",
-    "prop-types": "^15.5.7"
+    "prop-types": "^15.5.10",
+    "babel-preset-env": "^1.6.1"
   },
   "files": ["index.js", "index.es.js", "index.d.ts"]
 }
