--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   },
   "peerDependencies": {
     "@fortawesome/fontawesome": ">=1.1.0",
-    "prop-types": "15.x",
     "react": "16.x"
   },
   "devDependencies": {
@@ -50,7 +49,6 @@
     "jest": "^21.0.1",
     "prettier": "1.10.2",
     "pretty-quick": "^1.2.2",
-    "prop-types": "^15.5.10",
     "react": "16.0.0",
     "react-test-renderer": "16.0.0",
     "rollup": "0.50.0",
@@ -59,7 +57,8 @@
     "rollup-plugin-node-resolve": "^3.0.0"
   },
   "dependencies": {
-    "humps": "^2.0.1"
+    "humps": "^2.0.1",
+    "prop-types": "^15.5.7"
   },
   "files": ["index.js", "index.es.js"]
 }
