--- a/package.json
+++ b/package.json
@@ -43,15 +43,16 @@
     "react": "16.x"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-external-helpers": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-3": "^7.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.0-7",
     "@types/react": "^16.4.8",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-jest": "^23.4.2",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
+    "babel-core": "^7.0.0-0",
+    "babel-eslint": "^10.0.0",
+    "babel-jest": "^23.6.0",
     "cross-env": "^5.1.1",
     "eslint": "^5.3.0",
     "eslint-config-standard": "^11.0.0-beta.0",
@@ -62,7 +63,7 @@
     "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-standard": "^3.0.1",
     "husky": "^0.14.3",
-    "jest": "^23.5.0",
+    "jest": "^23.6.0",
     "lint-staged": "^7.2.0",
     "markdown-toc": "^1.2.0",
     "prettier": "^1.11.1",
@@ -70,10 +71,10 @@
     "prop-types": "^15.5.10",
     "react": "^16.2.0",
     "react-test-renderer": "^16.2.0",
-    "rollup": "^0.64.0",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "^9.1.0",
-    "rollup-plugin-node-resolve": "^3.3.0"
+    "rollup": "^1.0.0",
+    "rollup-plugin-babel": "^4.2.0",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^4.0.0"
   },
   "dependencies": {
     "humps": "^2.0.1",
