--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fortawesome/react-fontawesome",
   "description": "Official React component for Font Awesome 5",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "main": "index.js",
   "module": "index.es.js",
   "jsnext:main": "index.es.js",
@@ -21,7 +21,8 @@
     "Naor Torgeman <github.com/naortor>",
     "Matthew Hand <github.com/mmhand123>",
     "Calvin Freitas <github.com/calvinf>",
-    "Bill Parrott <github.com/chimericdream>"
+    "Bill Parrott <github.com/chimericdream>",
+    "baelec <github.com/baelec>"
   ],
   "license": "MIT",
   "scripts": {
