Updated contributor info for @baelec (#297)

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "Matthew Hand <github.com/mmhand123>",
     "Calvin Freitas <github.com/calvinf>",
     "Bill Parrott <github.com/chimericdream>",
-    "baelec <github.com/baelec>"
+    "Mike Lynch <github.com/baelec>"
   ],
   "license": "MIT",
   "scripts": {
