--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fortawesome/react-fontawesome",
   "description": "Official React component for Font Awesome 5",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "main": "index.js",
   "module": "index.es.js",
   "jsnext:main": "index.es.js",
@@ -23,7 +23,8 @@
     "Calvin Freitas <github.com/calvinf>",
     "Bill Parrott <github.com/chimericdream>",
     "Mike Lynch <github.com/baelec>",
-    "Lukáš Rod <github.com/rodlukas>"
+    "Lukáš Rod <github.com/rodlukas>",
+    "Proudust <github.com/proudust>"
   ],
   "license": "MIT",
   "scripts": {
