Allow React 17 in peer deps (#395)

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   },
   "peerDependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.20",
-    "react": "16.x"
+    "react": ">=16.x"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
