--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        node: [10.14.x]
+        node: [14]
         react: [
           16.2.x,
           16.3.x,
