--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     ]
   },
   "peerDependencies": {
-    "@fortawesome/fontawesome-svg-core": "~1 || >=1.3.0-beta1",
+    "@fortawesome/fontawesome-svg-core": "~1 || ~6",
     "react": ">=16.x"
   },
   "devDependencies": {
