--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fortawesome/react-fontawesome",
   "description": "Official React component for Font Awesome 5",
-  "version": "0.1.17",
+  "version": "0.1.18",
   "main": "index.js",
   "module": "index.es.js",
   "jsnext:main": "index.es.js",
@@ -25,7 +25,8 @@
     "Mike Lynch <github.com/baelec>",
     "Lukáš Rod <github.com/rodlukas>",
     "Proudust <github.com/proudust>",
-    "Tiago Sousa <github.com/TiagoPortfolio>"
+    "Tiago Sousa <github.com/TiagoPortfolio>",
+    "Alexey Victorov <github.com/AliMamed>"
   ],
   "license": "MIT",
   "scripts": {
@@ -36,7 +37,7 @@
     "prepack": "npm run dist",
     "test": "npm run test.5 && npm run test.6",
     "test.5": "npm --no-save install @fortawesome/fontawesome-svg-core@1.2.x @fortawesome/free-solid-svg-icons@5.x && jest --silent",
-    "test.6": "npm --no-save install @fortawesome/fontawesome-svg-core@1.3.x @fortawesome/free-solid-svg-icons@6.x && jest --silent",
+    "test.6": "npm --no-save install @fortawesome/fontawesome-svg-core@6.x @fortawesome/free-solid-svg-icons@6.x && jest --silent",
     "clean": "rm -f index.js && rm -f index.es.js"
   },
   "lint-staged": {
