--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fortawesome/react-fontawesome",
   "description": "Official React component for Font Awesome",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "main": "index.js",
   "module": "index.es.js",
   "jsnext:main": "index.es.js",
@@ -27,7 +27,8 @@
     "Proudust <github.com/proudust>",
     "Tiago Sousa <github.com/TiagoPortfolio>",
     "Alexey Victorov <github.com/AliMamed>",
-    "Calum Smith <github.com/cpmsmith>"
+    "Calum Smith <github.com/cpmsmith>",
+    "squiaios <github.com/squiaios>"
   ],
   "license": "MIT",
   "scripts": {
